# ProTo2

./: .gitignore  .stglobalignore  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  dev.sh  docker.sh  environment.yml  pyproject.toml  run-tool.sh  run.sh
database/: proto-tool-cache.shelve.db
docker/alpine-glibc-mambaforge/: Dockerfile
docker/alpine-mamba-syncthing/: Dockerfile
docker/alpine-syncthing-proto/: Dockerfile
docker/old/linuxserver-syncthing-mambaforge/: Dockerfile
docker/old/proto2/: Dockerfile
docker/old/syncthing_mambaforge/: Dockerfile  (+1 more)
docker/proto2-test/: Dockerfile
galaxy/: proto2.js
instance/: shutdown.sh
lib/compat/: galaxy.py
lib/gsuite/: GSuite.py  GSuiteComposer.py  GSuiteConstants.py  GSuiteParser.py  GSuiteRequirements.py  GSuiteTrack.py  GSuiteUtils.py
lib/proto/: BaseToolController.py  CommonFunctions.py  HtmlCore.py  OptionsBoxes.py  ProtoToolRegister.py  RSetup.py  StaticFile.py  TableCoreMixin.py  galaxy_tool_classes.py  generictool.py  gui.py  protoToolExecute.py
lib/track/: CommonMemmapFunctions.py  SmartMemmap.py  TrackFormat.py
lib/trackfind/: TrackFindModule.py
lib/util/: CommonConstants.py  CommonFunctions.py  RandomUtil.py
proto2/: __init__.py  app.py  check.py  fastapi_app.py  flask_app.py  get_proxy_path.py
proto2/compat/: __init__.py  galaxy.py
proto2/database/: proto-tool-cache.shelve.db
proto2/proto/: BaseToolController.py  CommonFunctions.py  ProtoToolRegister.py  generictool.py  gui.py
proto2/templates/: base.mako  functions.mako  generictool.mako  index.html  root_base.mako
(+51 files in other folders)
